# code-magic-public

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/common_tools/: base64.rs  cmd.rs  code_full_half.rs  crypto_algorithm.rs  format.rs  md5.rs  mod.rs  qrcode.rs  sql_lite.rs  timestamp.rs  urlencode.rs
src-tauri/src/sql_lite/: connection.rs
src-tauri/src/vojo/: mod.rs
src/components/: about-dialog.tsx  languageMenu.tsx  menu.tsx  preferenceDialog.tsx
src/dashboard/: page.tsx
src/dashboard/components/: sidebar.tsx
src/dashboard/page/: base64ImagePage.tsx  base64Page.tsx  base64TextPage.tsx  colorPalettePage.tsx  cryptoPage.tsx  diffViewerPage.tsx  digestPage.tsx  formatJsonPage.tsx  formatPage.tsx  formatSqlPage.tsx  formatXmlPage.tsx  formatYamlPage.tsx  halfFullPage.tsx  loadTestingPage.tsx  qrcodePage.tsx  regexPage.tsx  sm2Page.tsx  sm3Page.tsx  sm4Page.tsx  timestampPage.tsx  urlencodePage.tsx
src/locales/zh/: main.json
src/styles/: globals.css
