[package]
name = "code_magic"
version = "0.0.19"
description = "A development tools"
authors = ["lsk"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "path-all", "protocol-all", "shell-open", "dialog-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

log = "^0.4"
base64 = "0.21.5"
md-5 = "0.10.6"
sha2 = "0.10.8"
anyhow = "1.0"
percent-encoding = "2.3.0"
chrono = "0.4.31"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

qrcode-generator = "4.1.9"
image = "0.24.7"
tokio = { version = "1.27.0",  features = ["full", "tracing"] }
colorsys = { version = "*", default-features = false }
dirs = "5.0"
uuid= {version="1.4.0",features = [
    "v4",               
    "fast-rng",         
    "macro-diagnostics",
] }
barcoders = {version = "1.0.2", features = ["image", "svg"] }
quick-xml = {version="0.31.0",features = ["serialize"] }
gmsm = "0.1"
aes = "0.8.3"
hex = "0.4"
num = "0.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_repr = "0.1.17"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.
debug = false


[env]
STATIC_VCRUNTIME=false
